[gd_scene load_steps=37 format=3 uid="uid://ckt56b0r56sll"]

[ext_resource type="Script" path="res://Actors/player.gd" id="1_7dgss"]
[ext_resource type="Texture2D" uid="uid://bjy4f8yaloubw" path="res://assets/Sprites/Characters/player/Foxy/Roll/Roll1.png" id="2_awnsn"]
[ext_resource type="Texture2D" uid="uid://hgt6bfvr5o1e" path="res://assets/Sprites/Characters/player/Foxy/Roll/Roll2.png" id="3_10j1k"]
[ext_resource type="Texture2D" uid="uid://b6da5kusndgxt" path="res://assets/Sprites/Characters/player/Foxy/Roll/Roll3.png" id="4_nra2c"]
[ext_resource type="Texture2D" uid="uid://dpqhcakrydk01" path="res://assets/Sprites/Characters/player/Foxy/Roll/Roll4.png" id="5_emrdd"]
[ext_resource type="Texture2D" uid="uid://b6bfoctxp85rd" path="res://assets/Sprites/Characters/player/Foxy/jump/player-jump-2.png" id="6_mn74s"]
[ext_resource type="Texture2D" uid="uid://b0kdo0ptcqvg7" path="res://assets/Sprites/Characters/player/Foxy/idle/player-idle-1.png" id="6_u4da6"]
[ext_resource type="Texture2D" uid="uid://b4xmvdwuetj7r" path="res://assets/Sprites/Characters/player/Foxy/idle/player-idle-2.png" id="7_o5evm"]
[ext_resource type="Texture2D" uid="uid://cxqx3mnd81x81" path="res://assets/Sprites/Characters/player/Foxy/idle/player-idle-3.png" id="8_ygdyw"]
[ext_resource type="Texture2D" uid="uid://b53q4b4f7iuvo" path="res://assets/Sprites/Characters/player/Foxy/idle/player-idle-4.png" id="9_6gond"]
[ext_resource type="Texture2D" uid="uid://b8c2h5nsrupnp" path="res://assets/Sprites/Characters/player/Foxy/jump/player-jump-1.png" id="11_5fau4"]
[ext_resource type="Texture2D" uid="uid://d1ri3pqcgtc6e" path="res://assets/Sprites/Characters/player/Foxy/run/player-run-1.png" id="12_h2iua"]
[ext_resource type="Texture2D" uid="uid://b3l6s3hx2suvo" path="res://assets/Sprites/Characters/player/Foxy/run/player-run-2.png" id="13_menph"]
[ext_resource type="Texture2D" uid="uid://drg5f31xtacdh" path="res://assets/Sprites/Characters/player/Foxy/run/player-run-3.png" id="14_2rpop"]
[ext_resource type="Texture2D" uid="uid://cgw8i28hgk4x0" path="res://assets/Sprites/Characters/player/Foxy/run/player-run-4.png" id="15_fs8y0"]
[ext_resource type="Texture2D" uid="uid://bx5h2k8tiypi2" path="res://assets/Sprites/Characters/player/Foxy/run/player-run-5.png" id="16_jx4vw"]
[ext_resource type="PackedScene" uid="uid://kktngreqjkox" path="res://Components/hit_box_component.tscn" id="16_xqcqs"]
[ext_resource type="Texture2D" uid="uid://bujxd1t5t02gl" path="res://assets/Sprites/Characters/player/Foxy/run/player-run-6.png" id="17_fdsxn"]
[ext_resource type="PackedScene" uid="uid://b5gugbvrilk8m" path="res://Components/hurt_box_component.tscn" id="17_tyw2w"]
[ext_resource type="Texture2D" uid="uid://beijvypnh0t8" path="res://assets/Sprites/GUI/Button.png" id="18_061au"]
[ext_resource type="Texture2D" uid="uid://docxatmxowqp1" path="res://assets/Sprites/Characters/player/Foxy/WallGrab/wall-grab1.png" id="18_vf6no"]
[ext_resource type="Texture2D" uid="uid://byonva7tebn7e" path="res://assets/Sprites/Characters/player/Foxy/WallGrab/wall-grab2.png" id="19_pas4q"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8gwlf"]
load_path = "res://.godot/imported/player-hurt-1.png-e90825ffc98e9e70aab7776de04d7a8a.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_1byyc"]
load_path = "res://.godot/imported/player-hurt-2.png-c265d2ade9a1062ca63ec1d53397fe0d.ctex"

[sub_resource type="SpriteFrames" id="SpriteFrames_d3x6c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_awnsn")
}, {
"duration": 1.0,
"texture": ExtResource("3_10j1k")
}, {
"duration": 1.0,
"texture": ExtResource("4_nra2c")
}, {
"duration": 1.0,
"texture": ExtResource("5_emrdd")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_mn74s")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_8gwlf")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_1byyc")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_u4da6")
}, {
"duration": 1.0,
"texture": ExtResource("7_o5evm")
}, {
"duration": 1.0,
"texture": ExtResource("8_ygdyw")
}, {
"duration": 1.0,
"texture": ExtResource("9_6gond")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_5fau4")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_h2iua")
}, {
"duration": 1.0,
"texture": ExtResource("13_menph")
}, {
"duration": 1.0,
"texture": ExtResource("14_2rpop")
}, {
"duration": 1.0,
"texture": ExtResource("15_fs8y0")
}, {
"duration": 1.0,
"texture": ExtResource("16_jx4vw")
}, {
"duration": 1.0,
"texture": ExtResource("17_fdsxn")
}],
"loop": true,
"name": &"run",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_vf6no")
}, {
"duration": 1.0,
"texture": ExtResource("19_pas4q")
}],
"loop": true,
"name": &"wall_grab",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rvqtj"]
radius = 7.0
height = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sch5j"]
size = Vector2(13, 2)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_syf3k"]
radius = 7.0
height = 24.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ovipb"]
atlas = ExtResource("18_061au")
region = Rect2(197, 2716, 181, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_5x1ri"]
atlas = ExtResource("18_061au")
region = Rect2(606, 2716, 181, 189)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1jdon"]
size = Vector2(181, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1h2p"]
atlas = ExtResource("18_061au")
region = Rect2(197, 2498, 181, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_83mkp"]
atlas = ExtResource("18_061au")
region = Rect2(606, 2498, 181, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6nrq"]
atlas = ExtResource("18_061au")
region = Rect2(2148, 101, 181, 189)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dljq"]
atlas = ExtResource("18_061au")
region = Rect2(2557, 101, 181, 189)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_14pcv"]
size = Vector2(181, 189)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_7dgss")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_d3x6c")
animation = &"dash"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_rvqtj")

[node name="HitBoxComponent" parent="." instance=ExtResource("16_xqcqs")]
position = Vector2(-1, 14)
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
self_modulate = Color(0.780392, 0, 0.807843, 1)
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_sch5j")

[node name="HurtBoxComponent" parent="." instance=ExtResource("17_tyw2w")]
collision_mask = 32

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtBoxComponent"]
visible = false
modulate = Color(0.360784, 0.847059, 0.105882, 1)
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_syf3k")

[node name="ReviveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="." groups=["buttonContainer"]]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 20.0
offset_top = 500.0
offset_right = 60.0
offset_bottom = 540.0

[node name="MoveLeft" type="TouchScreenButton" parent="CanvasLayer/Control"]
texture_normal = SubResource("AtlasTexture_ovipb")
texture_pressed = SubResource("AtlasTexture_5x1ri")
shape = SubResource("RectangleShape2D_1jdon")
action = "move_left"

[node name="Control2" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 250.0
offset_top = 500.0
offset_right = 290.0
offset_bottom = 540.0

[node name="MoveRight" type="TouchScreenButton" parent="CanvasLayer/Control2"]
texture_normal = SubResource("AtlasTexture_e1h2p")
texture_pressed = SubResource("AtlasTexture_83mkp")
shape = SubResource("RectangleShape2D_1jdon")
action = "move_right"

[node name="Control3" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 1050.0
offset_top = 500.0
offset_right = 1090.0
offset_bottom = 540.0

[node name="Jump" type="TouchScreenButton" parent="CanvasLayer/Control3"]
position = Vector2(17, 4)
texture_normal = SubResource("AtlasTexture_i6nrq")
texture_pressed = SubResource("AtlasTexture_0dljq")
shape = SubResource("RectangleShape2D_14pcv")
action = "jump"

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="DashCoolDown" type="Timer" parent="."]

[connection signal="timeout" from="ReviveTimer" to="." method="_on_revive_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashCoolDown" to="." method="_on_dash_cool_down_timeout"]
